--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,13 @@
 {
     "builds": [{
-      "src": "inv_managament/wsgi.py",
+      "src": "inv_management/wsgi.py",
       "use": "@vercel/python",
       "config": { "maxLambdaSize": "15mb", "runtime": "python3.12.8" }
     }],
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "inv_managament/wsgi.py"
+        "dest": "inv_management/wsgi.py"
       }
     ]
 }
