--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ crispy-tailwind==1.0.3
 Django==5.1.6
 django-crispy-forms==2.3
 psycopg-binary==3.2.4
-psycopg2==2.9.10
+psycopg2-binary==2.9.10
 shortuuid==1.0.13
 sqlparse==0.5.3
 tzdata==2025.1
